# halt-core

./: .gitignore  LICENSE  README.md  publish.ps1  pypi_deployment.md  pyproject.toml  requirements.txt
halt_core/: __init__.py  ast_guard.py  config.py  file_guard.py  main.py  shell_parser.py
halt_core/interceptor/: __init__.py  engine.py  llm_client.py  memory.py  middleware.py
halt_core/interceptor/rules/: __init__.py  base.py  semantic_rules.py  shell_rules.py  sql_rules.py  stateful_rules.py
halt_core/models/: __init__.py  schemas.py
simulator/: __init__.py  agent_sim.py
tests/: test_enterprise.py  test_guards.py
